<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="Sort Receipts"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ToggleButton
        android:id="@+id/toggleSortDirectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="Descending"
        android:textOn="Ascending" />

    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="194dp">

        <RadioButton
            android:id="@+id/sortByDefaultRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="By Order Added" />

        <RadioButton
            android:id="@+id/sortByDateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By Date Issued" />

        <RadioButton
            android:id="@+id/byProviderRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By Provider Name" />

        <RadioButton
            android:id="@+id/sortByGrandTotalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By Grand Total" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="Search Receipts"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/searchDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <TextView
        android:id="@+id/transactionDateEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transactionDate" />

    <TextView
        android:id="@+id/searchVendorNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiptProvider"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/receiptProviderEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receiptProviderTextEditHint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/searchGrandTotalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transactionTotalLabel"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/transactionTotalEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transactionTotalEditTextHint"
        android:inputType="numberDecimal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/saveReceiptChangesButton2"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/cardview_dark_background"
            android:gravity="center"
            android:text="Enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>